# Zangbeto

./: .env.example  Cargo.toml  Diagnostic.jl  Makefile  Move.toml  README.md  omo_diagnostic.py  package.json  read first
.github/workflows/: ci.yml  conflict-check.yml
crates/consensus-bft/: Cargo.toml
crates/consensus-bft/src/: lib.rs
crates/crypto-kernel/: Cargo.toml
crates/crypto-kernel/src/: glyph_audit.rs  lib.rs
crates/omo-diagnostic/: Cargo.toml
crates/omo-diagnostic/src/: zangbeto_client.rs
crates/omo-diagnostic/src/agent/: diagnostic_handler.rs
crates/omo-kernel/: Cargo.toml
crates/omo-kernel/src/: lib.rs
crates/omo-kernel/src/branching/: mod.rs
crates/omo-kernel/src/capability/: mod.rs
crates/omo-kernel/src/consensus/: temporal.rs
crates/omo-kernel/src/kernel/: css.rs
crates/omo-kernel/src/memory/: consensus.rs
crates/omo-kernel/src/sandbox/: mod.rs
crates/omo-kernel/src/zangbeto/: ir.rs
crates/waggle-promoter/: Cargo.toml
crates/waggle-promoter/src/: lib.rs
crates/zangbeto-enforcement/: Cargo.toml
crates/zangbeto-enforcement/src/: guardian.rs  http.rs  lib.rs  receipts.rs  rollback.rs  server.rs
immune/masks/: veil1_ifa_bones.py  veil4_temple_codes.py  veil6_chaos_fractals.py
immune/sandbox/: run_with_limits.py
ops/: sabbath_checklist.md
shrine/examples/: payments.move
shrine/scripts/: arweave_anchor.js  bootstrap.sh  ots.sh  submit_onchain_receipt.js
shrine/sources/: zbt_core.move  zbt_diagnostics.move  zbt_errors.move  zbt_guard.move
