[package]
name = "crypto-kernel"
version = "0.4.0"
edition = "2021"

[dependencies]
vm-core = { path = "../vm-core" }
ed25519-dalek = { version = "2.0", features = ["serde", "rand_core"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
