[package]
name = "omo-diagnostic"
version = "0.2.0"
edition = "2021"
description = "Canonical diagnostic schema for Omo-Koda self-healing loop"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
rand = "0.8"
ed25519-dalek = "2.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.8"
omo-kernel = { path = "../omo-kernel" }

[[bin]]
name = "steward-heartbeat"
path = "src/bin/steward-heartbeat.rs"

[[bin]]
name = "steward"
path = "src/bin/steward.rs"
