[package]
name = "omo-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
async-trait = "0.1"
json-patch = "4.2"
jsonptr = "0.7"
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
chrono = "0.4"

[features]
default = ["audit"]
audit = []  # Enable Zàngbétò layer
