[package]
name = "zangbeto-enforcement"
version = "0.1.0"
edition = "2021"
description = "Deterministic enforcement daemon for Reality VM"

[dependencies]
vm-core = { path = "../vm-core" }
crypto-kernel = { path = "../crypto-kernel" }
crdt-memory = { path = "../crdt-memory" }
policy-runtime = { path = "../policy-runtime" }
replay-engine = { path = "../replay-engine" }

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0"
axum = "0.7"

[[bin]]
name = "zangbeto-server"
path = "src/bin/zangbeto-server.rs"

[dev-dependencies]
tokio-test = "0.4"
