[package]
name = "zangbeto-enforcement"
version = "0.1.0"
edition = "2021"
description = "Deterministic enforcement daemon for Reality VM"

[dependencies]
vm-core = { path = "../vm-core" }
crypto-kernel = { path = "../crypto-kernel" }
crdt-memory = { path = "../crdt-memory" }
policy-runtime = { path = "../policy-runtime" }
replay-engine = { path = "../replay-engine" }

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0"
axum = "0.7"
ed25519-dalek = "2.0"
rand_core = { version = "0.6", features = ["getrandom"] }
# Real Ed25519 keypair derivation for the guardian signing identity, same
# lineage as Omo-Koda2's own identity derivation (pinned to the same rev).
bipon39 = { git = "https://github.com/cryptonomicsed-byte/BIPON39", rev = "9d62b4de8e5b78199a1534ab7b45e08612620380" }

[[bin]]
name = "zangbeto-server"
path = "src/bin/zangbeto-server.rs"

[dev-dependencies]
tokio-test = "0.4"
